<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAccY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accY2"
        app:layout_constraintBottom_toTopOf="@+id/tvAccZ"
        app:layout_constraintEnd_toStartOf="@+id/accY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccX" />

    <TextView
        android:id="@+id/tvAccX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accX"
        app:layout_constraintBottom_toTopOf="@+id/tvAccY"
        app:layout_constraintEnd_toStartOf="@+id/accX"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAccZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accZ2"
        app:layout_constraintBottom_toTopOf="@+id/tvGyroX"
        app:layout_constraintEnd_toStartOf="@+id/accZ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccY" />

    <TextView
        android:id="@+id/tvGyroX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/gyroX2"
        app:layout_constraintBottom_toTopOf="@+id/tvGyroY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccZ" />

    <TextView
        android:id="@+id/tvGyroY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/gyroY2"
        app:layout_constraintBottom_toTopOf="@+id/tvGyroZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGyroX" />

    <TextView
        android:id="@+id/tvGyroZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:text="@string/gyroZ2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGyroY" />

    <TextView
        android:id="@+id/accX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/accY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAccX"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gyroX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gyroY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/tvGyroX"
        app:layout_constraintTop_toBottomOf="@+id/accZ" />

    <TextView
        android:id="@+id/gyroY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gyroZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGyroY"
        app:layout_constraintTop_toBottomOf="@+id/gyroX" />

    <TextView
        android:id="@+id/gyroZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGyroZ"
        app:layout_constraintTop_toBottomOf="@+id/gyroY" />

    <TextView
        android:id="@+id/accY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        app:layout_constraintBottom_toTopOf="@+id/accZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accX" />

    <TextView
        android:id="@+id/accZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gyroX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAccZ"
        app:layout_constraintTop_toBottomOf="@+id/accY" />
</androidx.constraintlayout.widget.ConstraintLayout>